[package]
name = "actix"
version = "0.1.0"
authors = ["oyun <oyun@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"

reqwest = "0.10.6"
openssl = { version = "0.10.29", features = ["vendored"] } # Needed for cross.comp.musl_Orhan_https://users.rust-lang.org/t/help-on-cross-compiling-openssl-to-armhf/40871
select = "0.4.3"

chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
